--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>I am a dedicated Cloud Engineer with over 3 years of professional experience in designing, implementing, and managing cloud infrastructure solutions. My expertise lies in leveraging cloud technologies to optimize performance, scalability, and security for diverse IT environments. I am proficient in AWS, Docker, Terraform & Automation Cloud Platform, adept at deploying robust architectures that meet business objectives seamlessly.
-                    </p>
+                    <p>I am a dedicated Cloud Engineer with over 3 years of professional experience in designing, implementing, and managing cloud infrastructure solutions. My expertise lies in leveraging cloud technologies to optimize performance, scalability, and security for diverse IT environments. I am proficient in AWS, Docker, Terraform & Automation Cloud Platform, adept at deploying robust architectures that meet business objectives seamlessly.</p>
                     <a href="https://in.linkedin.com/in/ahmed-khan-60a02a22b?trk=public_post_feed-actor-image">Know more</a>
                 </div>
                 <div class="column right">
@@ -116,7 +115,7 @@
                             <span>AWS Cloud</span>
                             <span>100%</span>
                         </div>
-                        <div class="line AWS"></div>
+                        <div class="line html"></div>
                     </div>
                 <div class="column right">
                     <div class="bars">
@@ -124,7 +123,7 @@
                             <span>Docker</span>
                             <span>90%</span>
                         </div>
-                        <div class="line Docker"></div>
+                        <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
@@ -138,21 +137,21 @@
                             <span>Jenkins (CICD)</span>
                             <span>70%</span>
                         </div>
-                        <div class="line Jenkins"></div>
+                        <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>AWS CDK</span>
                             <span>50%</span>
                         </div>
-                        <div class="line aws"></div>
+                        <div class="line php"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Kubernetes</span>
                             <span>70%</span>
                         </div>    
-                        <div class="line kubernetes"></div>
+                        <div class="line mysql"></div>
                     </div>
                 </div>
             </div>
