--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Ahmed Khan and I'm a <span class="typing-2"></span></div>
-                    <p>I am a dedicated Cloud Engineer with over 3 years of professional experience in designing, implementing, and managing cloud infrastructure solutions. My expertise lies in leveraging cloud technologies to optimize performance, scalability, and security for diverse IT environments. I am proficient in AWS, Azure, and Google Cloud Platform, adept at deploying robust architectures that meet business objectives seamlessly.
+                    <p>I am a dedicated Cloud Engineer with over 2 years of professional experience in designing, implementing, and managing cloud infrastructure solutions. My expertise lies in leveraging cloud technologies to optimize performance, scalability, and security for diverse IT environments. I am proficient in AWS, Azure, & DevOps Tools, adept at deploying robust architectures that meet business objectives seamlessly.
 
                         Beyond my technical skills, I am passionate about football, which serves as a dynamic counterbalance to my professional life. It enhances my teamwork, strategy, and resilience, qualities that resonate in both sports and technology. I thrive in collaborative environments, where creativity and innovation drive solutions that exceed expectations.</p>
                     <a href="https://drive.google.com/file/d/1Hbr1yXA-E45m0SKVpe4bbKnpHcvJi4lt/view?usp=drive_link">Download CV</a>
@@ -106,7 +106,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>I am a dedicated Cloud Engineer with over 3 years of professional experience in designing, implementing, and managing cloud infrastructure solutions. My expertise lies in leveraging cloud technologies to optimize performance, scalability, and security for diverse IT environments. I am proficient in AWS, Docker, Terraform & Automation Cloud Platform, adept at deploying robust architectures that meet business objectives seamlessly.</p>
+                    <p>I am a dedicated Cloud Engineer with over 2 years of professional experience in designing, implementing, and managing cloud infrastructure solutions. My expertise lies in leveraging cloud technologies to optimize performance, scalability, and security for diverse IT environments. I am proficient in AWS Cloud, Docker, Terraform, Linux K8S & Jenkins, adept at deploying robust architectures that meet business objectives seamlessly.</p>
                     <a href="https://in.linkedin.com/in/ahmed-khan-60a02a22b?trk=public_post_feed-actor-image">Know more</a>
                 </div>
                 <div class="column right">
@@ -148,10 +148,10 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Kubernetes</span>
-                            <span>70%</span>
+                            <span>Linux</span>
+                            <span>90%</span>
                         </div>    
-                        <div class="line mysql"></div>
+                        <div class="line html"></div>
                     </div>
                 </div>
             </div>
@@ -195,6 +195,13 @@
                     <div class="box">
                         <img src="images/disaster.jpeg" alt="">
                         <div class="text">Disaster Recovery Plan</div>
+                        <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>-->
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/AI-Chatbots.jpg" alt="">
+                        <div class="text">AI Chatbot Development</div>
                         <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>-->
                     </div>
                 </div>
