--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Certifications</a></li>
+                <li><a href="#certificate" class="menu-btn">Certifications</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#projects" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
@@ -69,7 +69,7 @@
     <!-- certificate section start -->
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">My Certicates</h2>
+            <h2 class="title">My Certificate</h2>
             <div class="serv-content">
     <div class="card">
         <div class="box">
@@ -128,14 +128,14 @@
                     <div class="bars">
                         <div class="info">
                             <span>Terraform</span>
-                            <span>80%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Jenkins (CICD)</span>
-                            <span>70%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
