--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
 
     <!-- certificate section start -->
-    <section class="services" id="services">
+    <section class="certificate" id="certificate">
         <div class="max-width">
             <h2 class="title">My Certificate</h2>
             <div class="serv-content">
