--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#certificate" class="menu-btn">Certifications</a></li>
+                <li><a href="#certificate" class="menu-btn">Certificates</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#projects" class="menu-btn">Projects</a></li>
+                <li><a href="#hobbies" class="menu-btn">Hobbies</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -208,6 +209,35 @@
             </div>
         </div>
     </section>
+
+             <!-- hobbies section start -->
+<section class="hobbies" id="hobbies">
+    <div class="max-width">
+        <h2 class="title">My Hobbies</h2>
+        <div class="carousel owl-carousel">
+            <div class="card">
+                <div class="box">
+                    <img src="images/football.jpg" alt="">
+                    <div class="text">Football</div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <img src="images/aboutjpg.jpg" alt="">
+                    <div class="text">Traveling</div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <img src="images/bike.png.jpg" alt="">
+                    <div class="text">Bike Riding</div>
+                </div>
+            </div>
+            <!-- Add more cards as needed -->
+        </div>
+    </div>
+</section>
+<!-- hobbies section end -->
 
     <!-- contact section start -->
     <section class="contact" id="contact">
