--- a/index.html
+++ b/index.html
@@ -303,12 +303,12 @@
     <div class="footer-content">
         <div class="social-icons">
             <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/4hmed_ll?igsh=NG52MWQ4YTF5dWlt" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/khan4hmed?igsh=NG52MWQ4YTF5dWlt" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://in.linkedin.com/in/ahmed-khan-60a02a22b?trk=public_post_feed-actor-image" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             <!-- Add more social media icons as needed -->
         </div>
         <div class="footer-info">
-            <span>Designed and Developed by <a href="https://www.instagram.com/4hmed_ll?igsh=NG52MWQ4YTF5dWlt" style="color: crimson; text-decoration: none;">Ahmed Khan</a> | <span style="color: crimson;" class="far fa-copyright"></span> 2024 All rights reserved.</span>
+            <span>Designed and Developed by <a href="https://www.instagram.com/khan4hmed?igsh=NG52MWQ4YTF5dWlt" style="color: crimson; text-decoration: none;">Ahmed Khan</a> | <span style="color: crimson;" class="far fa-copyright"></span> 2024 All rights reserved.</span>
         </div>
     </div>
 </footer>
